Add initial implementation

--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "666be00d-f264-4d02-8d64-dd271fd33b9e"
 authors = ["John Lapeyre <jlapeyre@users.noreply.github.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+
 [compat]
 julia = "1"
 
